--- a/website/pages/docs/components/badge.mdx
+++ b/website/pages/docs/components/badge.mdx
@@ -4,14 +4,14 @@ section: Components
 slug: /docs/components/badge/
 ---
 
-import { Badge, Box, BrowserWindow } from 'camara';
+import { Badge, Box, BrowserWindow, Flex } from 'camara';
 import { LiveConfig } from 'smooth-doc/components';
 
 <!-- Define `camara` module as `{ Badge }` -->
 
 <LiveConfig
   modules={{
-    camara: { Badge, Box, BrowserWindow },
+    camara: { Badge, Box, BrowserWindow, Flex },
   }}
 />
 
@@ -25,14 +25,14 @@ Badge description here.
 
 Badge properties
 
-| Property        | Description                                  | Type                     | Default  | Version |
-| --------------- | -------------------------------------------- | ------------------------ | -------- | ------- |
-| backgroundColor | Background color of the badge                | `string`                 | -        |         |
-| color           | Color of the badge text                      | `string`                 | -        |         |
-| text            | Badge text                                   | `ReactNode`              | -        |         |
-| shape           | Shape of the badge                           | `circle` `square` `pill` | `square` |         |
-| size            | Size of the badge                            | `large` `medium` `small` | `small`  |         |
-| position        | Position of badge relative to parent element | `middle` `top`           | -        |         |
+| Property | Description                                  | Type                     | Default  | Version |
+| -------- | -------------------------------------------- | ------------------------ | -------- | ------- |
+| bg       | Background color of the badge                | `string`                 | -        |         |
+| color    | Color of the badge text                      | `string`                 | -        |         |
+| text     | Badge text                                   | `ReactNode`              | -        |         |
+| shape    | Shape of the badge                           | `circle` `square` `pill` | `square` |         |
+| size     | Size of the badge                            | `large` `medium` `small` | `small`  |         |
+| position | Position of badge relative to parent element | `middle` `top`           | -        |         |
 
 <br></br>
 
@@ -41,13 +41,15 @@ Badge properties
 ### Size
 
 ```jsx live noInline
-import { Badge, BrowserWindow } from 'camara';
+import { Badge, BrowserWindow, Flex } from 'camara';
 
 render(
-  <BrowserWindow>
-    <Badge size="large" text="Preview" />
-    <Badge size="medium" text="Preview" />
-    <Badge size="small" text="Preview" />
+  <BrowserWindow docs>
+    <Flex>
+      <Badge size="large" text="Preview" />
+      <Badge size="medium" text="Preview" />
+      <Badge size="small" text="Preview" />
+    </Flex>
   </BrowserWindow>
 );
 ```
@@ -55,25 +57,27 @@ render(
 ### Shape
 
 ```jsx live noInline
-import { Badge, Box, BrowserWindow } from 'camara';
+import { Badge, Box, BrowserWindow, Flex } from 'camara';
 
 render(
-  <BrowserWindow>
-    <Box>
-      <Badge shape="square" size="large" text="Preview" />
-      <Badge shape="square" size="medium" text="Preview" />
-      <Badge shape="square" size="small" text="Preview" />
-    </Box>
-    <Box>
-      <Badge shape="pill" size="large" text="Preview" />
-      <Badge shape="pill" size="medium" text="Preview" />
-      <Badge shape="pill" size="small" text="Preview" />
-    </Box>
-    <Box>
-      <Badge shape="circle" size="large" text="M" />
-      <Badge shape="circle" size="medium" text="M" />
-      <Badge shape="circle" size="small" text="M" />
-    </Box>
+  <BrowserWindow docs>
+    <Flex>
+      <Box>
+        <Badge shape="square" size="large" text="Preview" />
+        <Badge shape="square" size="medium" text="Preview" />
+        <Badge shape="square" size="small" text="Preview" />
+      </Box>
+      <Box>
+        <Badge shape="pill" size="large" text="Preview" />
+        <Badge shape="pill" size="medium" text="Preview" />
+        <Badge shape="pill" size="small" text="Preview" />
+      </Box>
+      <Box>
+        <Badge shape="circle" size="large" text="M" />
+        <Badge shape="circle" size="medium" text="M" />
+        <Badge shape="circle" size="small" text="M" />
+      </Box>
+    </Flex>
   </BrowserWindow>
 );
 ```
@@ -81,57 +85,65 @@ render(
 ### Background Color
 
 ```jsx live noInline
-import { Badge, Box, BrowserWindow } from 'camara';
+import { Badge, Box, BrowserWindow, Flex } from 'camara';
 
 render(
-  <BrowserWindow>
-    <Box>
-      <Badge
-        shape="square"
-        size="large"
-        text="Preview"
-        backgroundColor="purple"
-      />
-      <Badge
-        shape="square"
-        size="medium"
-        text="Preview"
-        backgroundColor="purple"
-      />
-      <Badge
-        shape="square"
-        size="small"
-        text="Preview"
-        backgroundColor="purple"
-      />
-    </Box>
+  <BrowserWindow docs>
+    <Flex>
+      <Box>
+        <Badge
+          shape="square"
+          size="large"
+          text="Preview"
+          bg="purple"
+          color="#fff"
+        />
+        <Badge
+          shape="square"
+          size="medium"
+          text="Preview"
+          bg="purple"
+          color="#fff"
+        />
+        <Badge
+          shape="square"
+          size="small"
+          text="Preview"
+          bg="purple"
+          color="#fff"
+        />
+      </Box>
 
-    <Box>
-      <Badge
-        shape="pill"
-        size="large"
-        text="Preview"
-        backgroundColor="purple"
-      />
-      <Badge
-        shape="pill"
-        size="medium"
-        text="Preview"
-        backgroundColor="purple"
-      />
-      <Badge
-        shape="pill"
-        size="small"
-        text="Preview"
-        backgroundColor="purple"
-      />
-    </Box>
+      <Box>
+        <Badge
+          shape="pill"
+          size="large"
+          text="Preview"
+          bg="purple"
+          color="#fff"
+        />
+        <Badge
+          shape="pill"
+          size="medium"
+          text="Preview"
+          bg="purple"
+          color="#fff"
+        />
+        <Badge
+          shape="pill"
+          size="small"
+          text="Preview"
+          bg="purple"
+          color="#fff"
+        />
+      </Box>
 
-    <Box>
-      <Badge shape="circle" size="large" text="M" backgroundColor="purple" />
-      <Badge shape="circle" size="medium" text="M" backgroundColor="purple" />
-      <Badge shape="circle" size="small" text="M" backgroundColor="purple" />
-    </Box>
+      <Box>
+        <Badge shape="circle" size="large" text="M" bg="purple" color="#fff" />
+        <Badge shape="circle" size="medium" text="M" bg="purple" color="#fff" />
+        <Badge shape="circle" size="small" text="M" bg="purple" color="#fff" />
+      </Box>
+    </Flex>
   </BrowserWindow>
 );
 ```
